# GnosisCore

./: README.md  conftest.py  pyproject.toml  pytest-results.xml  pytest.ini  run_tests.bat  run_tests.py  setup.py  setup_gnosiscore.ps1
configs/: gnosis_taxonomy.xml  tree_of_patterns.yml
docs/: README.md  architecture.md  changelog.md  contributing.md  installation.md  modules.md  project_overview.md  testing.md  usage.md
gnosiscore/: __init__.py  cognitive_demo.py  demo.py
gnosiscore/core/: delta.py  field.py  reality_graph.py  transformer_iface.py
gnosiscore/flows/: flow_pattern.py
gnosiscore/forms/: form_base.py
gnosiscore/llm/: transformer.py
gnosiscore/memory/: __init__.py  subsystem.py
gnosiscore/messaging/: __init__.py
gnosiscore/patterns/: awareness.py  base.py  formulation.py  imprint.py  memory.py  origin.py  persistence.py  proliferation.py  pruning.py  pulse.py  representation.py
gnosiscore/planes/: __init__.py  awareness.py  digital.py  learning_feedback.py  mental.py  mental_api.py  metaphysical.py
gnosiscore/plugins/: __init__.py
gnosiscore/primitives/: __init__.py  models.py  subject.py
gnosiscore/selfmap/: __init__.py  autobiography.py  map.py  prompt_builder.py
gnosiscore/transformation/: __init__.py  awareness.py  base.py  digital_self.py  dispatcher.py  mental.py  observer.py  registry.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/core/: gnosis_core.py  (+1 more)
tests/: test_gnosis_core.py  test_primitive_awareness.py  test_tick.py
(+18 files in other folders)
